# rrpy

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/rr_orpy/: __init__.py  interface.py  planner.py
src/rr_ros/: __init__.py  controller.py  interface.py  utils.py
src/rr_task/: __init__.py  config.py  manager.py
